--- a/layout/index.html
+++ b/layout/index.html
@@ -176,7 +176,7 @@
             <div class="feedback__title">Получите консультацию от специалиста в удобное для Вас время</div>
             <form class="feedback__form" id="feedback1">
               <div class="feedback__input">
-                <input class="input feedback__input-input" name="phone" type="text" placeholder="Введите номер телефона"
+                <input class="input feedback__input-input" name="phone" type="tel" placeholder="Введите номер телефона"
                   id="feedback-input1" minlength="18"></div>
               <button class="button">Перезвоните мне</button>
               <div class="checkbox"><input class="checkbox__input" type="checkbox" id="checkbox1"> <label
@@ -824,7 +824,7 @@
           <div class="feedback__icon"><img src="./images/main/feedback_icon.svg" alt=""></div>
           <div class="feedback__title">Получите консультацию от специалиста в удобное для Вас время</div>
           <form class="feedback__form" id="feedback3">
-            <div class="feedback__input"><input class="input feedback__input-input" name="phone" type="text"
+            <div class="feedback__input"><input class="input feedback__input-input" name="phone" type="tel"
                 placeholder="Введите номер телефона" id="feedback-input3" minlength="18">
             </div>
             <button class="button">Перезвоните мне</button>
@@ -1324,7 +1324,7 @@
       <div class="feedback__icon"><img src="./images/main/feedback_icon.svg" alt=""></div>
       <div class="feedback__title">Получите консультацию от специалиста в удобное для Вас время</div>
       <form class="feedback__form" id="feedback6">
-        <div class="feedback__input"><input class="input feedback__input-input" name="phone" type="text"
+        <div class="feedback__input"><input class="input feedback__input-input" name="phone" type="tel"
             placeholder="Введите номер телефона" id="feedback-input6" minlength="18">
         </div>
         <button class="button button-consultation">Перезвоните мне</button>
