Готова отправка форм и появления окна спасибо после отправки

--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -9052,4 +9052,13 @@ strong {
   transition: 0.5s;
 }
 
-;
+.popup-thank {
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.popup-thank--active {
+  visibility: visible;
+  opacity: 1;
+  transition: 0.5s;
+}
