--- a/layout/index.html
+++ b/layout/index.html
@@ -628,7 +628,7 @@
               stroke-linejoin="round"></path>
           </svg>
         </div>
-        <div class="slider-arrow slider-arrow_left-portfolio mobile-hide" id="portfolio-arrow_left">
+        <div class="slider-arrow slider-arrow_left-portfolio mobile-hide arrow-hidden" id="portfolio-arrow_left">
           <svg width="18" height="12" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 12"
             preserveAspectRatio="xMinYMin meet">
             <path
@@ -645,7 +645,7 @@
           </svg>
         </div>
         <div class="portfolio-slider mobile-hide">
-          <div class="portfolio-slider__slide fade-tab">
+          <div class="portfolio-slider__slide fade-tab portfolio-slide--active">
             <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
                 src="./images/portfolio/img_1.jpg" alt="img_1">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
@@ -657,9 +657,9 @@
               </div>
             </div>
           </div><!-- /portfolio-slider__slide -->
-          <div class="portfolio-slider__slide fade-tab">
-            <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-                src="./images/portfolio/img_3.jpg" alt="img_3">
+          <div class="portfolio-slider__slide fade-tab portfolio-slide--active">
+            <div class="portfolio-slider__slide-frame portfolio-slide--active"><img
+                class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_3.jpg" alt="img_3">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
               </div>
             </div>
@@ -669,7 +669,7 @@
               </div>
             </div>
           </div><!-- /portfolio-slider__slide -->
-          <div class="portfolio-slider__slide fade-tab">
+          <div class="portfolio-slider__slide fade-tab portfolio-slide--active">
             <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
                 src="./images/portfolio/img_5.jpg" alt="img_5">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
@@ -1001,7 +1001,7 @@
       <div class="accordion">
         <ul>
           <li>
-            <h2 class="title_block msg-active">«Можно ли удешевить ремонт и как это сделать?»</h2>
+            <h2 class="title_block">«Можно ли удешевить ремонт и как это сделать?»</h2>
             <div class="msg">
               <p>Ремонт забирает не мало сил, нервов, времени и конечно же финансовых затрат. Удешевить и
                 сэкономить на ремонте можно!</p>
