--- a/layout/index.html
+++ b/layout/index.html
@@ -285,7 +285,7 @@
       <div class="section-title formula-title">Формула успешности <span>ремонта от Relax Live</span></div>
       <div class="formula-slider-wrap">
         <div class="formula-slider">
-          <div class="formula-item formula-slider__slide">
+          <div class="formula-item formula-slider__slide formula-item--active">
             <div class="formula-item__icon">
               <div class="formula-item-popup formula-item-popup-01">Работы ведутся
                 <strong>точно</strong> по графику со
