--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -4180,7 +4180,7 @@ div.wave-block:nth-child(17):after {
 .reviews-slider__slide {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -9122,4 +9122,8 @@ strong {
   display: flex;
   opacity: 1;
   transition: 1s ease;
+}
+
+.reviews-slider__slide--active {
+  display: flex;
 }
