--- a/layout/index.html
+++ b/layout/index.html
@@ -719,7 +719,7 @@
       <div class="section-subtitle">Никаких скрытых платежей и сорванных сроков!</div>
       <div class="transparency-slider-wrap">
         <div class="transparency-slider row">
-          <div class="transparency-item">
+          <div class="transparency-item transparency-item--active">
             <div class="transparency-item__img">
               <img src="./images/transparency/item_img.jpg" alt="document">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
