--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -9136,3 +9136,26 @@ strong {
 .transparency-item--active {
   display: flex;
 }
+
+.popup-transparency {
+  opacity: 0;
+  transition: 1s ease;
+}
+
+.transparency--active {
+  visibility: visible;
+  opacity: 1;
+  transition: 1s ease;
+}
+
+.popup-transparency-slider__slide {
+  display: none;
+  opacity: 0;
+  transition: 1s ease;
+}
+
+.popup-transparency-slider__slide--active {
+  display: block;
+  opacity: 1;
+  transition: 1s ease;
+}
