--- a/layout/index.html
+++ b/layout/index.html
@@ -2201,8 +2201,8 @@
       </div>
       <div class="popup-transparency-slider-wrap">
         <div class="popup-transparency-slider">
-          <div class="popup-transparency-slider__slide"><img class="mobile-hide"
-              src="./images/popup/transparency-slide1.jpg" alt="">
+          <div class="popup-transparency-slider__slide popup-transparency-slider__slide--active"><img
+              class="mobile-hide" src="./images/popup/transparency-slide1.jpg" alt="">
             <img class="tablet-hide desktop-hide" src="./images/popup/mobile1.jpg" alt=""></div>
           <div class="popup-transparency-slider__slide"><img class="mobile-hide"
               src="./images/popup/transparency-slide2.jpg" alt="">
