--- a/layout/index.html
+++ b/layout/index.html
@@ -378,8 +378,8 @@
       <div class="row row_reverse">
         <div class="repair-types-slider-wrap">
           <div class="repair-types-slider">
-            <div class="types-repair1">
-              <div class="repair-types-slider__slide">
+            <div class="types-repair1 type-slide type-slide--active" data-tab-name="tab-1">
+              <div class="repair-types-slider__slide repair-types-slider__slide--active">
                 <img src="./images/repair-types/electro.jpg" alt="electro"></div>
               <div class="repair-types-slider__slide">
                 <img src="./images/repair-types/cosmetic.jpg" alt="cosmetic"></div>
@@ -390,7 +390,7 @@
               <div class="repair-types-slider__slide">
                 <img src="./images/repair-types/cosmetic.jpg" alt="cosmetic"></div>
             </div>
-            <div class="types-repair2">
+            <div class="types-repair2 type-slide" data-tab-name="tab-2">
               <div class="repair-types-slider__slide">
                 <img src="./images/repair-types/cosmetic.jpg" alt="cosmetic"></div>
               <div class="repair-types-slider__slide">
@@ -400,7 +400,7 @@
               <div class="repair-types-slider__slide">
                 <img src="./images/repair-types/electro.jpg" alt="electro"></div>
             </div>
-            <div class="types-repair3">
+            <div class="types-repair3 type-slide" data-tab-name="tab-3">
               <div class="repair-types-slider__slide">
                 <img src="./images/repair-types/capital.jpg" alt="capital"></div>
               <div class="repair-types-slider__slide">
@@ -408,13 +408,13 @@
               <div class="repair-types-slider__slide">
                 <img src="./images/repair-types/capital.jpg" alt="capital"></div>
             </div>
-            <div class="types-repair4">
+            <div class="types-repair4 type-slide" data-tab-name="tab-4">
               <div class="repair-types-slider__slide">
                 <img src="./images/repair-types/electro.jpg" alt="electro"></div>
               <div class="repair-types-slider__slide">
                 <img src="./images/repair-types/cosmetic.jpg" alt="cosmetic"></div>
             </div>
-            <div class="types-repair5">
+            <div class="types-repair5 type-slide" data-tab-name="tab-5">
               <div class="repair-types-slider__slide">
                 <img src="./images/repair-types/capital.jpg" alt="capital"></div>
               <div class="repair-types-slider__slide">
@@ -463,7 +463,9 @@
           <div class="nav-wrap nav-wrap-repair">
             <nav class="nav repair-types-nav">
               <div class="nav-list nav-list-repair">
-                <button type="button" class="button_o repair-types-nav__item repair-types-nav__item-1 active">
+                <button type="button"
+                  class="button_o repair-types-nav__item repair-types-nav__item-1 active repair-types-nav__item--active"
+                  data-tab-name="tab-1">
                   <svg width="259" height="46" fill="none" viewBox="0 0 259 46" preserveAspectRatio="xMinYMin meet">
                     <path
                       d="M33.5 1h-10c-12.15 0-22 9.85-22 22s9.85 22 22 22h187M48.5 1h187c12.15 0 22 9.85 22 22s-9.85 22-22 22h-17.1"
@@ -471,7 +473,8 @@
                   </svg>
                   Частичный ремонт
                 </button><!-- /.repair-types__nav-item -->
-                <button type="button" class="button_o repair-types-nav__item repair-types-nav__item-2">
+                <button type="button" class="button_o repair-types-nav__item repair-types-nav__item-2"
+                  data-tab-name="tab-2">
                   <svg width="300" height="46" fill="none" viewBox="0 0 300 46" preserveAspectRatio="xMinYMin meet">
                     <path
                       d="M38.25 1H23C10.85 1 1 10.85 1 23s9.85 22 22 22h221.289M55.711 1H277c12.15 0 22 9.85 22 22s-9.85 22-22 22h-23.515"
@@ -479,7 +482,8 @@
                   </svg>
                   Косметический ремонт
                 </button><!-- /.repair-types__nav-item -->
-                <button type="button" class="button_o repair-types-nav__item repair-types-nav__item-3">
+                <button type="button" class="button_o repair-types-nav__item repair-types-nav__item-3"
+                  data-tab-name="tab-3">
                   <svg width="281" height="46" fill="none" viewBox="0 0 281 46" preserveAspectRatio="xMinYMin meet">
                     <path
                       d="M35.875 1H23C10.85 1 1 10.85 1 23s9.85 22 22 22h205.777M52.223 1H258c12.15 0 22 9.85 22 22s-9.85 22-22 22h-20.613"
@@ -487,7 +491,8 @@
                   </svg>
                   Капитальный ремонт
                 </button><!-- /.repair-types__nav-item -->
-                <button type="button" class="button_o repair-types-nav__item repair-types-nav__item-4">
+                <button type="button" class="button_o repair-types-nav__item repair-types-nav__item-4"
+                  data-tab-name="tab-4">
                   <svg width="268" height="46" fill="none" viewBox="0 0 268 46" preserveAspectRatio="xMinYMin meet">
                     <path
                       d="M34.25 1H23C10.85 1 1 10.85 1 23s9.85 22 22 22h195.164M49.836 1H245c12.15 0 22 9.85 22 22s-9.85 22-22 22h-18.627"
@@ -495,7 +500,8 @@
                   </svg>
                   Евроремонт ремонт
                 </button><!-- /.repair-types__nav-item -->
-                <button type="button" class="button_o repair-types-nav__item repair-types-nav__item-5">
+                <button type="button" class="button_o repair-types-nav__item repair-types-nav__item-5"
+                  data-tab-name="tab-5">
                   <svg width="324" height="46" fill="none" viewBox="0 0 324 46" preserveAspectRatio="xMinYMin meet">
                     <path
                       d="M41.25 1H23C10.85 1 1 10.85 1 23s9.85 22 22 22h240.883M60.117 1H301c12.15 0 22 9.85 22 22s-9.85 22-22 22h-27.18"
