--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -6022,6 +6022,7 @@ div.wave-block:nth-child(17):after {
 .popup-portfolio-slider__slide {
   height: 100%;
   overflow: hidden;
+  display: none;
 }
 
 @media (max-width: 575px) {
@@ -9201,5 +9202,13 @@ strong {
 }
 
 .repair-types-slider__slide--active {
+  display: block;
+}
+
+.popup-portfolio-slider__slide--active {
+  display: block;
+}
+
+.popup-portfolio-text--active {
   display: block;
 }
