--- a/layout/index.html
+++ b/layout/index.html
@@ -572,43 +572,43 @@
       <div class="portfolio-slider-wrap">
         <div class="portfolio-slider-mobile tablet-hide desktop-hide">
           <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-              src="./images/portfolio/img_1.jpg" alt="img_1">
+              src="./images/portfolio/img_1.jpg" alt="img_1" data-img-name="img-1">
             <div class="item-hover"></div>
           </div>
           <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-              src="./images/portfolio/img_2.jpg" alt="img_2">
+              src="./images/portfolio/img_2.jpg" alt="img_2" data-img-name="img-2">
             <div class="item-hover"></div>
           </div>
           <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-              src="./images/portfolio/img_3.jpg" alt="img_3">
+              src="./images/portfolio/img_3.jpg" alt="img_3" data-img-name="img-3">
             <div class="item-hover"></div>
           </div>
           <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-              src="./images/portfolio/img_4.jpg" alt="img_4">
+              src="./images/portfolio/img_4.jpg" alt="img_4" data-img-name="img-4">
             <div class="item-hover"></div>
           </div><!-- /portfolio-slider__slide -->
           <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-              src="./images/portfolio/img_5.jpg" alt="img_5">
+              src="./images/portfolio/img_5.jpg" alt="img_5" data-img-name="img-5">
             <div class="item-hover"></div>
           </div>
           <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-              src="./images/portfolio/img_6.jpg" alt="img_6">
+              src="./images/portfolio/img_6.jpg" alt="img_6" data-img-name="img-6">
             <div class="item-hover"></div>
           </div><!-- /portfolio-slider__slide -->
           <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-              src="./images/portfolio/img_4.jpg" alt="img_1">
+              src="./images/portfolio/img_4.jpg" alt="img_1" data-img-name="img-7">
             <div class="item-hover"></div>
           </div>
           <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-              src="./images/portfolio/img_3.jpg" alt="img_2">
+              src="./images/portfolio/img_3.jpg" alt="img_2" data-img-name="img-8">
             <div class="item-hover"></div>
           </div><!-- /portfolio-slider__slide -->
           <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-              src="./images/portfolio/img_2.jpg" alt="img_3">
+              src="./images/portfolio/img_2.jpg" alt="img_3" data-img-name="img-9">
             <div class="item-hover"></div>
           </div>
           <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-              src="./images/portfolio/img_1.jpg" alt="img_4">
+              src="./images/portfolio/img_1.jpg" alt="img_4" data-img-name="img-10">
             <div class="item-hover"></div>
           </div><!-- /portfolio-slider__slide -->
         </div><!-- /portfolio-slider -->
@@ -652,61 +652,61 @@
         </div>
         <div class="portfolio-slider mobile-hide">
           <div class="portfolio-slider__slide fade-tab portfolio-slide--active">
-            <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-                src="./images/portfolio/img_1.jpg" alt="img_1">
+            <div class="portfolio-slider__slide-frame" data-img-name="img-1"><img
+                class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_1.jpg" alt="img_1">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
               </div>
             </div>
-            <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-                src="./images/portfolio/img_2.jpg" alt="img_2">
+            <div class="portfolio-slider__slide-frame" data-img-name="img-2"><img
+                class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_2.jpg" alt="img_2">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
               </div>
             </div>
           </div><!-- /portfolio-slider__slide -->
           <div class="portfolio-slider__slide fade-tab portfolio-slide--active">
-            <div class="portfolio-slider__slide-frame portfolio-slide--active"><img
+            <div class="portfolio-slider__slide-frame portfolio-slide--active" data-img-name="img-3"><img
                 class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_3.jpg" alt="img_3">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
               </div>
             </div>
-            <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-                src="./images/portfolio/img_4.jpg" alt="img_4">
+            <div class="portfolio-slider__slide-frame" data-img-name="img-4"><img
+                class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_4.jpg" alt="img_4">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
               </div>
             </div>
           </div><!-- /portfolio-slider__slide -->
           <div class="portfolio-slider__slide fade-tab portfolio-slide--active">
-            <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-                src="./images/portfolio/img_5.jpg" alt="img_5">
+            <div class="portfolio-slider__slide-frame" data-img-name="img-5"><img
+                class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_5.jpg" alt="img_5">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
               </div>
             </div>
-            <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-                src="./images/portfolio/img_6.jpg" alt="img_6">
-              <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
-              </div>
-            </div>
-          </div><!-- /portfolio-slider__slide -->
-          <div class="portfolio-slider__slide fade-tab">
-            <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-                src="./images/portfolio/img_4.jpg" alt="img_1">
-              <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
-              </div>
-            </div>
-            <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-                src="./images/portfolio/img_3.jpg" alt="img_2">
+            <div class="portfolio-slider__slide-frame" data-img-name="img-6"><img
+                class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_6.jpg" alt="img_6">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
               </div>
             </div>
           </div><!-- /portfolio-slider__slide -->
           <div class="portfolio-slider__slide fade-tab">
-            <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-                src="./images/portfolio/img_2.jpg" alt="img_3">
+            <div class="portfolio-slider__slide-frame" data-img-name="img-7"><img
+                class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_4.jpg" alt="img_1">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
               </div>
             </div>
-            <div class="portfolio-slider__slide-frame"><img class="portfolio-slider__slide-frame-img"
-                src="./images/portfolio/img_1.jpg" alt="img_4">
+            <div class="portfolio-slider__slide-frame" data-img-name="img-8"><img
+                class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_3.jpg" alt="img_2">
+              <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
+              </div>
+            </div>
+          </div><!-- /portfolio-slider__slide -->
+          <div class="portfolio-slider__slide fade-tab">
+            <div class="portfolio-slider__slide-frame" data-img-name="img-9"><img
+                class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_2.jpg" alt="img_3">
+              <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
+              </div>
+            </div>
+            <div class="portfolio-slider__slide-frame" data-img-name="img-10"><img
+                class="portfolio-slider__slide-frame-img" src="./images/portfolio/img_1.jpg" alt="img_4">
               <div class="item-hover"><img src="./images/zoom.svg" alt="zoom"> <span>Нажмите, чтобы<br>увеличить</span>
               </div>
             </div>
@@ -1803,16 +1803,26 @@
             </svg>
           </div>
           <div class="popup-portfolio-slider">
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/1.jpg" alt=""></div>
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/2.jpg" alt=""></div>
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/3.jpg" alt=""></div>
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/4.jpg" alt=""></div>
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/5.jpg" alt=""></div>
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/6.jpg" alt=""></div>
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/4.jpg" alt=""></div>
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/3.jpg" alt=""></div>
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/2.jpg" alt=""></div>
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/1.jpg" alt=""></div>
+            <div class="popup-portfolio-slider__slide" data-img-name="img-1"><img src="./images/popup/1.jpg" alt="">
+            </div>
+            <div class="popup-portfolio-slider__slide" data-img-name="img-2"><img src="./images/popup/2.jpg" alt="">
+            </div>
+            <div class="popup-portfolio-slider__slide" data-img-name="img-3"><img src="./images/popup/3.jpg" alt="">
+            </div>
+            <div class="popup-portfolio-slider__slide" data-img-name="img-4"><img src="./images/popup/4.jpg" alt="">
+            </div>
+            <div class="popup-portfolio-slider__slide" data-img-name="img-5"><img src="./images/popup/5.jpg" alt="">
+            </div>
+            <div class="popup-portfolio-slider__slide" data-img-name="img-6"><img src="./images/popup/6.jpg" alt="">
+            </div>
+            <div class="popup-portfolio-slider__slide" data-img-name="img-7"><img src="./images/popup/4.jpg" alt="">
+            </div>
+            <div class="popup-portfolio-slider__slide" data-img-name="img-8"><img src="./images/popup/3.jpg" alt="">
+            </div>
+            <div class="popup-portfolio-slider__slide" data-img-name="img-9"><img src="./images/popup/2.jpg" alt="">
+            </div>
+            <div class="popup-portfolio-slider__slide" data-img-name="img-10"><img src="./images/popup/1.jpg" alt="">
+            </div>
             <!-- /popup-portfolio-slide -->
           </div>
           <div class="slider-counter" id="popup-portfolio-counter">
@@ -1836,7 +1846,7 @@
             </svg>
           </div>
         </div>
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text" data-img-name="img-1">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
@@ -1871,7 +1881,7 @@
             <div class="popup-portfolio-text__title"><strong>Тюленев Э.Н.</strong></div>
           </div>
         </div><!-- /popup-portfolio-text -->
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text" data-img-name="img-2">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
@@ -1906,7 +1916,7 @@
             <div class="popup-portfolio-text__title"><strong>Тюленев Э.Н.</strong></div>
           </div>
         </div>
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text" data-img-name="img-3">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
@@ -1941,7 +1951,7 @@
             <div class="popup-portfolio-text__title"><strong>Тюленев Э.Н.</strong></div>
           </div>
         </div><!-- /popup-portfolio-text -->
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text" data-img-name="img-4">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
@@ -1976,7 +1986,7 @@
             <div class="popup-portfolio-text__title"><strong>Тюленев Э.Н.</strong></div>
           </div>
         </div><!-- /popup-portfolio-text -->
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text" data-img-name="img-5">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
@@ -2011,7 +2021,7 @@
             <div class="popup-portfolio-text__title"><strong>Тюленев Э.Н.</strong></div>
           </div>
         </div><!-- /popup-portfolio-text -->
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text" data-img-name="img-6">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
@@ -2046,7 +2056,7 @@
             <div class="popup-portfolio-text__title"><strong>Тюленев Э.Н.</strong></div>
           </div>
         </div><!-- /popup-portfolio-text -->
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text" data-img-name="img-7">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
@@ -2081,7 +2091,7 @@
             <div class="popup-portfolio-text__title"><strong>Тюленев Э.Н.</strong></div>
           </div>
         </div><!-- /popup-portfolio-text -->
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text" data-img-name="img-8">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
@@ -2116,7 +2126,7 @@
             <div class="popup-portfolio-text__title"><strong>Тюленев Э.Н.</strong></div>
           </div>
         </div><!-- /popup-portfolio-text -->
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text" data-img-name="img-9">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
@@ -2151,7 +2161,7 @@
             <div class="popup-portfolio-text__title"><strong>Тюленев Э.Н.</strong></div>
           </div>
         </div><!-- /popup-portfolio-text -->
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text" data-img-name="img-10">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
