--- a/layout/admin/table.html
+++ b/layout/admin/table.html
@@ -6,7 +6,7 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Управление базой данных</title>
   <link rel="stylesheet" href="styles/index.css">
-  <script src="redict.js" defer></script>
+  <script src="listServices.js" defer></script>
 </head>
 
 <body>
